[gd_scene load_steps=11 format=3 uid="uid://bfj36q6npgot2"]

[ext_resource type="Script" uid="uid://cs6xgweboybne" path="res://scenes/ui/board/unit_stats.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://k2hh8e6861ja" path="res://scenes/map_editor/tile_view.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://thnrfs1tirjj" path="res://assets/gui/menu/backgrounds/main_panel.png" id="2_hpbsf"]
[ext_resource type="PackedScene" uid="uid://b6leaqbp4x4wb" path="res://scenes/ui/icons/star.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="4_cdooe"]
[ext_resource type="Texture2D" uid="uid://biu2u7rf4o1vh" path="res://assets/gui/editor/circle.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="7_uei01"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="8_bi61j"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="9_su1sf"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="10_w23e6"]

[node name="unit_stats" type="Node2D"]
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
offset_left = -400.0
offset_top = -225.0
offset_right = 400.0
offset_bottom = 225.0
texture = ExtResource("2_hpbsf")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="tile_view" parent="background" instance=ExtResource("2")]
position = Vector2(80, 110)

[node name="level1" type="Node2D" parent="background"]
visible = false
position = Vector2(20, 130)

[node name="star" parent="background/level1" instance=ExtResource("4")]
position = Vector2(60, -70)

[node name="level2" type="Node2D" parent="background"]
visible = false
position = Vector2(20, 130)

[node name="star" parent="background/level2" instance=ExtResource("4")]
position = Vector2(50, -70)

[node name="star2" parent="background/level2" instance=ExtResource("4")]
position = Vector2(70, -70)

[node name="level3" type="Node2D" parent="background"]
visible = false
position = Vector2(20, 130)

[node name="star" parent="background/level3" instance=ExtResource("4")]
position = Vector2(50, -65)

[node name="star2" parent="background/level3" instance=ExtResource("4")]
position = Vector2(70, -65)

[node name="star3" parent="background/level3" instance=ExtResource("4")]
position = Vector2(60, -80)

[node name="unit_name" type="Label" parent="background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = -393.0
theme_override_fonts/font = ExtResource("4_cdooe")
theme_override_font_sizes/font_size = 42
text = "Infantry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 60.0
offset_right = 250.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_HP"
vertical_alignment = 1

[node name="hp_value" type="Label" parent="background/hp_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "10/10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="armour_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_ARMOUR"
vertical_alignment = 1

[node name="armour_value" type="Label" parent="background/armour_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ap_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_MP"
vertical_alignment = 1

[node name="ap_value" type="Label" parent="background/ap_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "4/4"
horizontal_alignment = 2
vertical_alignment = 1

[node name="attack_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 250.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_ATTACK"
vertical_alignment = 1

[node name="attack_value" type="Label" parent="background/attack_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "6"
horizontal_alignment = 2
vertical_alignment = 1

[node name="level_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 140.0
offset_right = 250.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_LEVEL"
vertical_alignment = 1

[node name="level_value" type="Label" parent="background/level_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="kills_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 150.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 180.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "TR_KILLS"
vertical_alignment = 1

[node name="kills_value" type="Label" parent="background/kills_label"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("4_cdooe")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="abilities" type="Node2D" parent="background"]
position = Vector2(400, 60)

[node name="ab1" type="Node2D" parent="background/abilities"]
position = Vector2(0, 45)

[node name="bg" type="Sprite2D" parent="background/abilities/ab1"]
position = Vector2(50, 0)
texture = ExtResource("5")

[node name="label" type="Label" parent="background/abilities/ab1"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
vertical_alignment = 1

[node name="description" type="Label" parent="background/abilities/ab1"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap_mode = 3

[node name="anchor" type="Node2D" parent="background/abilities/ab1"]
position = Vector2(50, 0)

[node name="ab2" type="Node2D" parent="background/abilities"]
position = Vector2(0, 150)

[node name="bg" type="Sprite2D" parent="background/abilities/ab2"]
position = Vector2(50, 0)
texture = ExtResource("5")

[node name="label" type="Label" parent="background/abilities/ab2"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
vertical_alignment = 1

[node name="description" type="Label" parent="background/abilities/ab2"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap_mode = 3

[node name="anchor" type="Node2D" parent="background/abilities/ab2"]
position = Vector2(50, 0)

[node name="ab3" type="Node2D" parent="background/abilities"]
position = Vector2(0, 255)

[node name="bg" type="Sprite2D" parent="background/abilities/ab3"]
position = Vector2(50, 0)
texture = ExtResource("5")

[node name="label" type="Label" parent="background/abilities/ab3"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
vertical_alignment = 1

[node name="description" type="Label" parent="background/abilities/ab3"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap_mode = 3

[node name="anchor" type="Node2D" parent="background/abilities/ab3"]
position = Vector2(50, 0)

[node name="passive" type="Node2D" parent="background"]
position = Vector2(20, 200)

[node name="label" type="Label" parent="background/passive"]
offset_right = 350.0
offset_bottom = 30.0
text = "Heavy Weapon"
vertical_alignment = 1

[node name="description" type="Label" parent="background/passive"]
offset_top = 30.0
offset_right = 350.0
offset_bottom = 130.0
text = "Heavy Weapon"
autowrap_mode = 3

[node name="back_button" type="TextureButton" parent="."]
offset_left = -95.0
offset_top = 175.0
offset_right = 95.0
offset_bottom = 215.0
texture_normal = ExtResource("7_uei01")
texture_pressed = ExtResource("8_bi61j")
texture_hover = ExtResource("9_su1sf")
texture_focused = ExtResource("9_su1sf")

[node name="label" type="Label" parent="back_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_w23e6")
text = "TR_BACK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
